<resources>
    <string name="app_name">Simple Inventory App UI</string>
    <string name="image_description">Inventory App logo</string>
    <string name="signin_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="user_name">Enter first name</string>
    <string name="additem_activity_title">Add Item</string>
    <string name="item_description_hint">Enter Description</string>
    <string name="column_item_description_heading">Description</string>
    <string name="sms_icon">SMS Notification</string>
    <string name="sms_permission_text">SMS App Permissions Requested</string>
    <string name="user_phone_number">Enter Phone #</string>
    <string name="user_email">Enter Email</string>
    <string name="user_pass">Enter Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sms_button_label">SMS</string>
    <string name="decrease_label_description">Increment item</string>
    <string name="increase_label_description">Decrement item</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="item_description">Item Description</string>
    <string name="item_quantity_label">Item Quantity</string>
    <string name="add_item_button">Add Item</string>
    <string name="cancel_button">Cancel</string>
    <string name="greeting">Welcome back, %s!</string>
    <string name="zero">0</string>
    <string name="logged_in_user">User Email: %s</string>
    <string name="scrollview_description">Items List ScrollView</string>
    <string name="column_item_quantity_heading">Quantity</string>
    <string name="add_vector_description">Add Item</string>
    <string name="login_activity">Log In</string>
    <string name="register_activity">Register User</string>

    <string name="total_items">Total</string>
    <string name="item_quantity_hint">Enter Item Quantity</string>
    <string name="delete_item_icon">Delete Item</string>
    <string name="item_quantity_row_hint">Quantity</string>
    <string name="item_row_description_hint">Description</string>
    <string name="edit_item_description">Edit Item</string>
    <string name="save_button_text">Save</string>
    <string name="forgot_password_ask">Forgot Password?</string>
    <string name="retrieve_pass_popup">Retrieve Password</string>
    <string name="password_hint">Enter Phone #</string>
    <string name="get_pass_button_text">Get Pass</string>
    <string name="edit_item_popup">Edit Item</string>
    <string name="sms_enable_msg">SMS feature required to notify user when inventory is empty. Enable or disable anytime. Allow permission to use this feature.</string>
    <string name="enable_sms_button">Enable SMS</string>
    <string name="disable_sms_button">Disable SMS</string>
</resources>
